mongo-depl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: mongo
  name: mongo-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: mongo
  template: 
    metadata: 
      labels: 
        app: mongo
    spec: 
      containers: 
        - 
          image: mongo
          name: mongo
          ports: 
            - 
              containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
