mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: mongo-express
  name: mongo-express
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: mongo-express
  template: 
    metadata: 
      labels: 
        app: mongo-express
    spec: 
      containers: 
        - 
          image: mongo-express
          name: mongo-express
          ports: 
            - 
              containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000
